@@ -1,5 +1,15 @@
 2007-08-22  Stefan Harmeling  <harmeli@dhcp-153-147.inf.ed.ac.uk>
 
+	* core.c (colon_fn): added case for integers: now 
+
+	     3:7
+
+	becomes
+
+	     (3, 4, 5, 6)
+
+	* object.c (equalequal_fn): added case for strings
+
 	* prelude.rha (fn): besides 
 
 	     t = tuple.new(4);
